--- a/assets/main.css
+++ b/assets/main.css
@@ -358,6 +358,7 @@ header.masthead .page-heading,header.masthead .post-heading,header.masthead .sit
     max-width: 100%;
     flex: 0 0 100%;
     padding: 0 20%;
+	}
 	#mainNav{
 		border-bottom:1px solid transparent;
 		background:transparent;
