--- a/assets/main.css
+++ b/assets/main.css
@@ -486,6 +486,7 @@ header.masthead .page-heading .subheading,header.masthead .site-heading .subhead
         padding-right: 7px;
         padding-left: 7px;
 }
+}
 @media only screen and (min-width: 960px) and (max-width: 1199.98px) {
 header.masthead .page-heading,header.masthead .post-heading,header.masthead .site-heading{
 	text-align:center;
