--- a/assets/main.css
+++ b/assets/main.css
@@ -487,6 +487,16 @@ header.masthead .page-heading .subheading,header.masthead .site-heading .subhead
         padding-left: 7px;
 }
 }
+@media only screen (min-width: 960px) and (max-width: 991.98px) {
+	.card-body{
+        padding: 0.5rem;}
+        .card{
+        border-radius:0.8rem;}
+        .cpad{
+        padding-right: 7px;
+        padding-left: 7px;
+}
+}
 @media only screen and (min-width: 960px) and (max-width: 1199.98px) {
 header.masthead .page-heading,header.masthead .post-heading,header.masthead .site-heading{
 	text-align:center;
