--- a/assets/main.css
+++ b/assets/main.css
@@ -495,7 +495,10 @@ header.masthead .page-heading .subheading,header.masthead .site-heading .subhead
         .cpad{
         padding-right: 7px;
         padding-left: 7px;
-}
+        }
+	.py-4 {
+	padding-top: 0.5rem;
+		padding-bottom: 0.5rem;}
 }
 @media only screen and (min-width: 960px) and (max-width: 1199.98px) {
 header.masthead .page-heading,header.masthead .post-heading,header.masthead .site-heading{
