--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,7 +55,7 @@ layout: default
   <div class="container">
                 <div class="row mt-3"> 
                     <div class="col-md-4 cpad mb-3 mb-md-5"> 
-                          <div class="card py-4 h-100"> 
+                          <div class="card py-4 h-100 cpad"> 
                              <div class="card-body text-center"> 
                                 <i class="fas fa-scroll bigicon pt-3 pb-3"></i> 
                                 <h4 class="text-uppercase medium m-3 text-gold">HISTORICAL REALISM</h4> 
@@ -65,7 +65,7 @@ layout: default
                         </div>                         
                     </div>
 			<div class="col-md-4 cpad mb-3 mb-md-5"> 
-                        <div class="card py-4 h-100"> 
+                        <div class="card py-4 h-100 cpad"> 
                             <div class="card-body text-center"> 
                                 <i class="fas fa-redo-alt bigicon pt-3 pb-3"></i>
                                 <h4 class="text-uppercase medium m-3 text-gold">HIGH REPLAYABILITY</h4> 
@@ -74,8 +74,8 @@ layout: default
                             </div>                             
                         </div>                         
                     </div>      
-                    <div class="col-md-4 cpad mb-3 mb-md-5"> 
-                        <div class="card py-4 h-100"> 
+                    <div class="col-md-4 mb-3 mb-md-5"> 
+                        <div class="card py-4 h-100 cpad"> 
                             <div class="card-body text-center"> 
                                 <i class="fas fa-capsules bigicon pt-3 pb-3"></i> 
                                 <h4 class="text-uppercase medium m-3 text-gold">BORDERLINE ADDICTIVE</h4> 
