--- a/assets/main.css
+++ b/assets/main.css
@@ -487,7 +487,7 @@ header.masthead .page-heading .subheading,header.masthead .site-heading .subhead
         padding-left: 7px;
 }
 }
-@media only screen (min-width: 960px) and (max-width: 991.98px) {
+@media only screen and (min-width: 960px) and (max-width: 991.98px) {
 	.card-body{
         padding: 0.5rem;}
         .card{
