--- a/assets/main.css
+++ b/assets/main.css
@@ -354,9 +354,8 @@ header.masthead .page-heading,header.masthead .post-heading,header.masthead .sit
 }
 .card-body .small{
         font-size: 100%;
-}
-}
-@media only screen and (min-width: 960px){
+}}
+@media only screen and (max-width: 960px){
 	p .col-pad{
     max-width: 100%;
     flex: 0 0 100%;
