--- a/assets/main.css
+++ b/assets/main.css
@@ -698,7 +698,7 @@ blockquote>p::before{
 }
 .floating-label-form-group input::-webkit-input-placeholder,.floating-label-form-group textarea::-webkit-input-placeholder{
 	color:#000000;
-	font-family:'Source Sans Pro', serif
+	font-family:'Source Sans Pro', serif;
 		opacity: 1;
 }
 .floating-label-form-group label{
