--- a/assets/main.css
+++ b/assets/main.css
@@ -350,8 +350,7 @@ header.masthead .page-heading,header.masthead .post-heading,header.masthead .sit
         width:41%;
         height:41%;
         margin-top:-5px;
-}
-}
+}}
 .card-body .small{
         font-size: 100%;
 }}
