--- a/assets/main.css
+++ b/assets/main.css
@@ -354,12 +354,19 @@ header.masthead .page-heading,header.masthead .post-heading,header.masthead .sit
 .card-body .small{
         font-size: 100%;
 }}
-@media only screen and (max-width: 960px){
+
+@media only screen and (min-width: 960px){
 	p .col-pad{
     max-width: 100%;
     flex: 0 0 100%;
     padding: 0 20%;
 	}
+	#mainNav .navbar-nav>li.nav-item>a{
+	font-weight:900;
+}
+}
+
+@media only screen and (max-width: 960px){
 	#mainNav{
 		border-bottom:1px solid transparent;
 		background:transparent;
@@ -383,7 +390,6 @@ header.masthead .page-heading,header.masthead .post-heading,header.masthead .sit
 	#mainNav .navbar-nav>li.nav-item>a{
 		padding:10px 20px;
 		color:#fff;
-	font-weight:900;
 }
 	#mainNav.is-fixed{
 		position:fixed;
@@ -413,27 +419,6 @@ header.masthead .page-heading,header.masthead .post-heading,header.masthead .sit
 		-ms-transform:translate3d(0, 100%, 0);
 		-o-transform:translate3d(0, 100%, 0);
 		transform:translate3d(0, 100%, 0)
-}
-header.masthead{
-	margin-bottom:40px;
-	background:no-repeat center center;
-	background-color:#868e96;
-	background-attachment:scroll;
-	position:relative;
-	height:187px;
-	-webkit-background-size:cover;
-	-moz-background-size:cover;
-	-o-background-size:cover;
-	background-size:cover
-}
-header.masthead .overlay{
-	position:absolute;
-	top:0;
-	left:0;
-	height:100%;
-	width:100%;
-	background-color:#212529;
-	opacity:0.1
 }
 }
 
