--- a/assets/main.css
+++ b/assets/main.css
@@ -293,7 +293,7 @@ img::-moz-selection{
 }
 #mainNav .navbar-nav>li.nav-item>a{
 	font-family:'Source Code Pro';
-	color:#fff;
+	color:#868e96;
 	font-size:12px;
 	font-weight:normal;
 	letter-spacing:2px;
