--- a/assets/main.css
+++ b/assets/main.css
@@ -356,7 +356,7 @@ header.masthead .page-heading,header.masthead .post-heading,header.masthead .sit
 }}
 
 @media only screen and (min-width: 960px){
-	p{
+	.container .row .mx-auto p{
     padding: 0 20%;
 	}
 	#mainNav .navbar-nav>li.nav-item>a{
