--- a/assets/main.css
+++ b/assets/main.css
@@ -360,8 +360,13 @@ header.masthead .page-heading,header.masthead .post-heading,header.masthead .sit
 	font-weight:500;
 }
 }
+@media only screen and (min-width: 960px) and (min-width: 991.98px){
+	p.col20{
+    padding: 0 10%;
+	}
+}
 @media only screen and (min-width: 991.98px){
-	.container .row .mx-auto p{
+	p.col20{
     padding: 0 20%;
 	}
 }
