--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ layout: default
       <div class="row">
         <div class="col-md-10 mx-auto">
           <div class="page-heading">
-	   <img src="/img/egypt.png">
+	   <img src="/img/egypt.png" alt="Egypt: Shattered Order">
             <!-- <h1>EGYPT: Shattered Order</h1>
               <span class="subheading">{{ site.description }}</span>-->
           </div>
@@ -27,8 +27,8 @@ layout: default
                 <div class="row text-md-center text-lg-center text-xl-center">
                     <div class="col-xs-12 col-sm-12 mx-auto ml-xs-0 ml-sm-0">
 			<h4 class="font-weight-bold text-h0">What would it be like to walk in the sandals of a Pharaoh?</h4>
-                        <p class="col-pad">You won't know until you unite Egypt — only the rulers of both Upper and Lower Egypt can be called as such, and, as of now, Egypt is shattered! Take the reins of this chariot on its way to the otherworld, restore the order, and build the great pyramid to preserve your legacy! But it's not going to be easy. The priests are breathing down your neck, the enemies are on a war footing, the noblemen are out of line, and, on top of all that, the God's Wife must be chosen swiftly, lest no heir is left to the throne...
-			    </p><p>Can you guide Egyptians through all the hardships to prosperity and power? Will your heart stay pure and uncorrupted so that your soul is granted access to the heavenly realms, to dwell with the gods?</p>
+                        <p class="col20">You won't know until you unite Egypt — only the rulers of both Upper and Lower Egypt can be called as such, and, as of now, Egypt is shattered! Take the reins of this chariot on its way to the otherworld, restore the order, and build the great pyramid to preserve your legacy! But it's not going to be easy. The priests are breathing down your neck, the enemies are on a war footing, the noblemen are out of line, and, on top of all that, the God's Wife must be chosen swiftly, lest no heir is left to the throne...
+			    </p><p class="col20">Can you guide Egyptians through all the hardships to prosperity and power? Will your heart stay pure and uncorrupted so that your soul is granted access to the heavenly realms, to dwell with the gods?</p>
 			                <h5 class="text-h0">Sign up to find out first-hand!</h5>
                     </div>
                 </div>
@@ -36,7 +36,7 @@ layout: default
 	  
             <div class="container">
                 <div class="row text-md-center text-lg-center text-xl-center col-auto">
-               <div class="subscription-form-input col-pad col-xs-12 mx-auto ml-xs-0 ml-sm-0">
+               <div class="subscription-form-input col-xs-12 mx-auto ml-xs-0 ml-sm-0">
                     <form id="sender-subscribe" target="_blank" action="https://app.sender.net/forms/sender_subscription/2812/e3bbda51" method="POST">  
 			    
                               <input name="email" class="email_type emai" id="email" data-label="E-mail" placeholder="Your e-mail" required>
@@ -44,7 +44,7 @@ layout: default
                     </form>
                                 <span class="sender-link-wrapper">
                     <a class="sender-link" href="http://sender.net" title="Email marketing services">
-                        <img src="https://app.sender.net/favicon.png">
+                        <img src="https://app.sender.net/favicon.png" alt="Provided by">
                         <span>Sender.net email marketing</span>
                     </a>
                 </span>
