--- a/assets/main.css
+++ b/assets/main.css
@@ -371,31 +371,8 @@ header.masthead .page-heading,header.masthead .post-heading,header.masthead .sit
 	}
 }
 
-/*--- @media only screen and (max-width: 960px){
-	#mainNav{
-		border-bottom:1px solid transparent;
-		background:transparent;
-		-webkit-transition:background-color 0.2s;
-		-moz-transition:background-color 0.2s;
-		transition:background-color 0.2s;
-		-webkit-transform:translate3d(0, 0, 0);
-		-moz-transform:translate3d(0, 0, 0);
-		-ms-transform:translate3d(0, 0, 0);
-		-o-transform:translate3d(0, 0, 0);
-		transform:translate3d(0, 0, 0);
-		-webkit-backface-visibility:hidden;
-}
-	#mainNav .navbar-brand{
-		padding:10px 20px;
-		color:#fff
-}
-	#mainNav .navbar-brand:focus,#mainNav .navbar-brand:hover{
-		color:rgba(255,255,255,0.8)
-}
-	#mainNav .navbar-nav>li.nav-item>a{
-		color:#868e96;
-}
-	#mainNav.is-fixed{
+@media only screen and (max-width: 960px){
+		#mainNav.is-fixed{
 		position:fixed;
 		top:-67px;
 		-webkit-transition:-webkit-transform 0.2s;
@@ -423,6 +400,31 @@ header.masthead .page-heading,header.masthead .post-heading,header.masthead .sit
 		-ms-transform:translate3d(0, 100%, 0);
 		-o-transform:translate3d(0, 100%, 0);
 		transform:translate3d(0, 100%, 0)
+}
+}
+/*--- 
+#mainNav{
+		border-bottom:1px solid transparent;
+		background:transparent;
+		-webkit-transition:background-color 0.2s;
+		-moz-transition:background-color 0.2s;
+		transition:background-color 0.2s;
+		-webkit-transform:translate3d(0, 0, 0);
+		-moz-transform:translate3d(0, 0, 0);
+		-ms-transform:translate3d(0, 0, 0);
+		-o-transform:translate3d(0, 0, 0);
+		transform:translate3d(0, 0, 0);
+		-webkit-backface-visibility:hidden;
+}
+	#mainNav .navbar-brand{
+		padding:10px 20px;
+		color:#fff
+}
+	#mainNav .navbar-brand:focus,#mainNav .navbar-brand:hover{
+		color:rgba(255,255,255,0.8)
+}
+	#mainNav .navbar-nav>li.nav-item>a{
+		color:#868e96;
 }
 	header.masthead{
 	margin-bottom:40px;
