--- a/assets/main.css
+++ b/assets/main.css
@@ -335,6 +335,7 @@ header.masthead .page-heading,header.masthead .post-heading,header.masthead .sit
         width:41%;
         height:41%;
 }
+}
 
 @media only screen and (min-width: 490px) and (max-width: 766.98px){
 	#mainNav{
