--- a/assets/main.css
+++ b/assets/main.css
@@ -406,7 +406,7 @@ header.masthead .page-heading,header.masthead .post-heading,header.masthead .sit
 		-o-transform:translate3d(0, 100%, 0);
 		transform:translate3d(0, 100%, 0)
 }
-		.container div div h4, .container div div h5{
+		.container div div h4, .container div div h5, .container h2{
 	margin: 0.7em auto;
         text-align:center;
 	}
