--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,19 +8,24 @@
     {% else %}{{ site.title | escape }}{% endif %}
   </title>
 
-  <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
-
+<meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
+<meta property="og:title" content="{{ page.title | escape }} | Narrative adventure with factual history at its core" />
+<meta name="author" content="Orcinus Games" />
+<meta property="og:locale" content="en_US" />
+<meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}" />
+<meta property="og:description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}" />
+<meta property="og:url" content="http://orsondewitt.github.io/" />
+<meta property="og:site_name" content="{{ page.title | escape }} | {{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}" />
+<script type="application/ld+json">
+{"@type":"WebSite","url":"{{ page.url | replace:'index.html','' | absolute_url }}","headline":"Egypt: Shattered Order | {{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}","name":"Egypt: Shattered Order | {{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}","author":{"@type":"Person","name":"Orcinus Games","url":"https://orsondewitt.com"},"description":"{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}","@context":"https://schema.org"}</script>
+  
+  
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-
   <link rel="stylesheet" href="{{"/assets/vendor/bootstrap/css/bootstrap.css" | relative_url }}">
-
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
-
   <link rel="stylesheet" href="{{"/assets/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
-
-  
 </head>
