--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,7 +43,7 @@ layout: default
 				 <button type="submit"><i class="fas fa-arrow-circle-right"></i> </button>
                     </form>
                                 <span class="sender-link-wrapper">
-                    <a class="sender-link" href="http://sender.net" title="Email marketing services">
+                    <a class="sender-link" href="http://sender.net" title="Email marketing services" rel=”nofollow”>
                         <img src="https://app.sender.net/favicon.png" alt="Provided by">
                         <span>Sender.net email marketing</span>
                     </a>
