--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ layout: default
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-	   <img src="/img/egypt.png" alt="Egypt: Shattered Order">
+	   <h1><img src="/img/egypt.png" alt="Egypt: Shattered Order"></h1>
             <!-- <h1>EGYPT: Shattered Order</h1>
               <span class="subheading">{{ site.description }}</span>-->
           </div>
