--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,11 +7,11 @@
     {% if page.title %}{{ page.title | escape }} | {{ site.title | escape }}   {% else %}{{ site.title | escape }}{% endif %}
   </title>
 
-<meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
+<meta name="description" content="Egypt: Shattered Order {{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 <meta property="og:title" content="{% if page.title %}{{ page.title | escape }} | {{ site.title | escape }}   {% else %}{{ site.title | escape }}{% endif %}" />
 <meta name="author" content="Orcinus Games" />
 <meta property="og:locale" content="en_US" />
-<meta property="og:description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}" />
+<meta property="og:description" content="Egypt: Shattered Order {{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}" />
 <meta property="og:url" content="http://orsondewitt.github.io/" />
 <meta property="og:site_name" content="{% if page.title %}{{ page.title | escape }} | {{ site.title | escape }}   {% else %}{{ site.title | escape }}{% endif %} | Orcinus Games" />
 <script type="application/ld+json">
