--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,7 +13,7 @@ layout: default
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-                      {% if page.url == "/about.html" or page.url == "/press-kit.html" %}
+                      {% if page.url == "/about.html" or page.url == "/press-kit.html" or page.url == "/contact.html" %}
           	   <img src="http://OrsonDeWitt.github.io/img/egypt.png" width="50%" height="50%">
           {% else %}
             <h1>SQUARE<br/>ZERO</h1>
