--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto mr-auto">
         <li class="nav-item">
-          {% if page.url == "/about.html" or page.url == "/press-kit.html" %}
+          {% if page.url == "/about.html" or page.url == "/press-kit.html" or page.url == "/contact.html"%}
           <a class="nav-link" href="{{"/index" | relative_url }}">Home</a>
           {% else %}
           <a class="nav-link" href="{{"/about" | relative_url }}">FAQ</a>
@@ -23,7 +23,11 @@
           {% endif %}
         </li>
         <li class="nav-item">
+          {% if page.url == "/contact.html" %}
+          <a class="nav-link" href="{{"/about" | relative_url }}">FAQ</a>
+          {% else %}
           <a class="nav-link" href="{{"/contact" | relative_url }}">Contact</a>
+          {% endif %}
         </li>
       </ul>
     </div>
