--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,5 +25,7 @@
   <link rel="stylesheet" href="{{"/assets/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
-
+  
+<meta name="google-site-verification" content="psyq_KHxngE95NvyrFXKfD-K8vQXnh2K737hpnlEiOk" />
+  
 </head>
