--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,6 +20,20 @@ layout: default
         </div>
       </div>
     </div>
+	    
+<style>
+    .ohnohoney{
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 0;
+        width: 0;
+        z-index: -1;
+    }
+</style>
+
+	    
   </header>
 	  
             <div class="container">
@@ -39,7 +53,13 @@ layout: default
                <div class="subscription-form-input col-xs-12 mx-auto ml-xs-0 ml-sm-0">
                     <form id="sender-subscribe" target="_blank" action="https://app.sender.net/forms/sender_subscription/2812/e3bbda51" method="POST">  
 			    
-                              <input name="email" class="email_type emai" id="email" data-label="E-mail" placeholder="Your e-mail" required>
+    <!-- Real field -->
+    <input name="emailkkksd" class="email_type emai" id="emai" data-label="E-mail" maxlength="100" placeholder="Your e-mail" required>
+    <!-- H o n e y p o t -->
+    <label class="ohnohoney" for="name"></label>
+    <input class="ohnohoney" autocomplete="off" type="text" id="name" name="name" placeholder="Your name here">
+    <label class="ohnohoney" for="email"></label>
+    <input class="ohnohoney" autocomplete="off" type="email" id="email" name="email" placeholder="Your e-mail here">
 				 <button type="submit"><i class="fas fa-arrow-circle-right"></i> </button>
                     </form>
                                 <span class="sender-link-wrapper">
