--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -54,7 +54,7 @@ layout: default
                     <form id="sender-subscribe" target="_blank" action="https://app.sender.net/forms/sender_subscription/2812/e3bbda51" method="POST">  
 			    
     <!-- Real field -->
-    <input name="emailkkksd" class="email_type emai" id="email" data-label="E-mail" maxlength="100" placeholder="Your e-mail" required>
+    <input name="email" class="email_type emai" id="email" data-label="E-mail" maxlength="100" placeholder="Your e-mail" required>
     <!-- H o n e y p o t -->
     <label class="ohnohoney" for="name"></label>
     <input class="ohnohoney" autocomplete="off" type="text" id="name" name="name" placeholder="Your name here">
