--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,6 +41,11 @@ layout: default
                     <form id="sender-subscribe" target="_blank" action="https://app.sender.net/forms/sender_subscription/2812/e3bbda51" method="POST">  
 	
     <input name="email" class="email_type emai" id="email" data-label="E-mail" maxlength="100" placeholder="Your e-mail" required>
+			    
+			    <br>
+                            <div id ="recaptcha-failed-message" hidden class="subscription-thank-you">Recaptcha failed, try again!</div>
+                            <div class="g-recaptcha" data-callback="submitGR" style="transform: scale(0.68); -webkit-transform: scale(0.68); transform-origin: 0 0; -webkit-transform-origin: 0 0;" data-sitekey="6Lek36IZAAAAAHLJFLZbOmRMQNnwZSeCuKmTG0XM"></div>
+			    
 				 <button type="submit"><i class="fas fa-arrow-circle-right"></i> </button>
                     </form>
                                 <span class="sender-link-wrapper">
