--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,6 +53,7 @@ layout: default
                         <img src="https://app.sender.net/favicon.png" alt="Provided by">
                         <span>Sender.net email marketing</span>
                     </a>
+					<script type="text/javascript" src="https://cdn.sender.net/webforms/2812/1d98ce24.js?v=19"></script>
                 </span>
                                     </div>
     </div>
