--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,6 +39,9 @@ layout: default
                 <div class="row text-md-center text-lg-center text-xl-center col-auto">
                <div class="subscription-form-input col-xs-12 mx-auto ml-xs-0 ml-sm-0">
 		       
+		       <div class="sender-sub-main">
+    <div class="sender-sub-inner">
+        <div class="subscription-form">
 <div class="subscription-form-fields">
 
 	    <form id="sender-subscribe" target="_blank" action="https://app.sender.net/forms/sender_subscription/2812/1d98ce24" method="POST">
