--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,18 +42,41 @@ layout: default
 		       <div class="sender-sub-main">
     <div class="sender-sub-inner">
         <div class="subscription-form">
+            <h4 class="dont-break-out">Egypt: Shattered Order</h4>
+                                        <div class="subscription-form-fields">
+                    <div class="subscription-form-content">
+                                            </div>
+                    <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/1d98ce24" method="POST">
+                                        
+                            <div class="subscription-form-fields" id="subscription-form-fields">
+                                                                                                        <input name="email" type="email"class="email_type" id="email" data-label="E-mail" placeholder="E-mail" required>
+                                                                                                </div>
+                        						                            <br>
+                            <div id ="recaptcha-failed-message" hidden class="subscription-thank-you">Recaptcha failed, try again!</div>
+                            <div class="g-recaptcha" data-callback="submitGR" style="transform: scale(0.68); -webkit-transform: scale(0.68); transform-origin: 0 0; -webkit-transform-origin: 0 0;" data-sitekey="6Lek36IZAAAAAHLJFLZbOmRMQNnwZSeCuKmTG0XM"></div>
+												                        <button id="submit-button" style="margin-top:5px" type="submit" class=" ">SIGN UP</button>
+                    </form>
+                </div>
+                               
+                                    </div>
+    </div>
+</div>                
+		       
+		       <div class="sender-sub-main">
+    <div class="sender-sub-inner">
+        <div class="subscription-form">
 <div class="subscription-form-fields">
 
 	    <form id="sender-subscribe" target="_blank" action="https://app.sender.net/forms/sender_subscription/2812/1d98ce24" method="POST">
 	<div class="subscription-form-fields" id="subscription-form-fields">
      <input name="email" type="email" class="email_type emai" id="email" data-label="E-mail" maxlength="100" placeholder="Your e-mail" required>
-
+		    <button type="submit" id="submit-button"><i class="fas fa-arrow-circle-right"></i> </button>
+                                                                                                </div>
                         						                            <br>
                             <div id ="recaptcha-failed-message" hidden class="subscription-thank-you">Recaptcha failed, try again!</div>
                             <div class="g-recaptcha" data-callback="submitGR" style="transform: scale(0.68); -webkit-transform: scale(0.68); transform-origin: 0 0; -webkit-transform-origin: 0 0;" data-sitekey="6Lek36IZAAAAAHLJFLZbOmRMQNnwZSeCuKmTG0XM"></div>
 				
-		    <button type="submit" id="submit-button"><i class="fas fa-arrow-circle-right"></i> </button>
-                                                                                                </div>
+
                     </form>
                                 <span class="sender-link-wrapper">
                     <a class="sender-link" href="http://sender.net" title="Email marketing services" rel=”nofollow”>
