--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Orcinus Games" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:description" content="Egypt: Shattered Order {{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}" />
-<meta property="og:url" content="http://orsondewitt.github.io/" />
+<meta property="og:url" content="https://egypt.orcinusgames.com/" />
 <meta property="og:site_name" content="{% if page.title %}{{ page.title | escape }} | Egypt: Shattered Order - {{ site.title | escape }}   {% else %}Egypt: Shattered Order - {{ site.title | escape }}{% endif %} | Orcinus Games" />
 <script type="application/ld+json">
 {"@type":"WebSite","url":"{{ page.url | replace:'index.html','' | absolute_url }}","headline":"Egypt: Shattered Order {{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}","name":"Egypt: Shattered Order {{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}","author":{"@type":"Person","name":"Orcinus Games","url":"https://orsondewitt.com"},"description":"Egypt: Shattered Order {{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}","@context":"https://schema.org"}</script>
