--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,7 @@
 <hr>
 
 <footer>
+    {% include scripts.html %}
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 col-xs-12 mx-auto text-center">
