--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -77,9 +77,7 @@ layout: default
             </a>
           </li>
           {% endif %}
-        </ul>
-        <p class="copyright text-muted"><i class="far fa-envelope"></i> <a href="mailto:{{ site.email }}" class="text-muted">{{ site.email }}</a><br>Copyright &copy; {{ site.author }}, {{ 'now' | date: "%Y" }}</p>
-      </div>
+        </ul>      </div>
     </div>
   </div>
 
